force-app/main/default/objects/Experian_Alert__c/Experian_Alert__c.object-meta.xml
<CustomObject>
    <label>Experian Alert</label>
    <nameField>
        <label>Experian Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>