force-app/main/default/objects/Experian_Alert__c/fields/Alert_ID__c.field-meta.xml
<CustomField>
    <fullName>Alert_ID__c</fullName>
    <label>Alert ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>