force-app/main/default/objects/Experian_Alert__c/fields/BIN__c.field-meta.xml
<CustomField>
    <fullName>BIN__c</fullName>
    <label>BIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>