force-app/main/default/objects/Experian_Alert__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <length>120</length>
    <type>Text</type>
</CustomField>