force-app/main/default/objects/Experian_Alert__c/fields/Trigger_ID__c.field-meta.xml
<CustomField>
    <fullName>Trigger_ID__c</fullName>
    <label>Trigger ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>